Heroku files part 5

--- a/dev_config.env
+++ b/dev_config.env
@@ -1,5 +1,5 @@
 SECRET_KEY='change_that!as)soon%as^possible*for#security(reasons^$*@83wlk390as'
 DEBUG=True
-ALLOWED_HOSTS='["127.0.0.1"]'
+ALLOWED_HOSTS='localhost'
 POSTGRES_USER=librarian
 POSTGRES_PASSWORD=ILOVEBOOKS
