--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,8 +19,14 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install -r requirements.txt
+      - name: Set environment variables
+        env:
+          SECRET_KEY: 9971fcdasf79agwiog4ba406bcaa2353234ds3tgd
+          DEBUG: False
+          ALLOWED_HOSTS: localhost
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
       - name: Test code
         run: |
           python manage.py test
