GH python tests check 3 - postgresql

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,6 +10,17 @@ jobs:
       matrix:
         python-version: [3.10.0]
 
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_DB: github_actions
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        ports:
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries
+
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
@@ -24,8 +35,9 @@ jobs:
         env:
           SECRET_KEY: 9971fcdasf79agwiog4ba406bcaa2353234ds3tgd
           DEBUG: False
-          ALLOWED_HOSTS: localhost
+          ALLOWED_HOSTS: '127.0.0.1'
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
         run: |
+          python manage.py migrate
           python manage.py test
