--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,4 +39,5 @@ jobs:
           POSTGRES_PASSWORD: postgres
         run: |
           python manage.py migrate
+          python manage.py collectstatic --noinput
           python manage.py test
